# graphed-awkward

./: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.graphed/: state.json
.graphed/M0/: attempts.md
.graphed/M15/: attempts.md
.graphed/M16/: attempts.md
.graphed/M17/: attempts.md
.graphed/M19/: attempts.md
.graphed/M21/: attempts.md
.graphed/M24/: attempts.md
.graphed/M28/: attempts.md
.graphed/M3/: attempts.md
.graphed/M5/: attempts.md
docs/: api.rst  conf.py  design.rst  improvements.rst  index.rst
scripts/: advance.py
src/graphed_awkward/: __init__.py  _ops.py  backend.py  functions.py  io.py  payloads.py  projection.py
tests/frozen/m10/: README.md  test_buffer_projection.py
tests/frozen/m11/: test_functions_only_idiom.py
tests/frozen/m15/: README.md  test_parquet_io.py
tests/frozen/m16/: README.md  m16_helpers.py  test_reducers.py  test_structural_rule.py  test_ufunc_tier.py
tests/frozen/m17/: README.md  test_structure_ops.py
tests/frozen/m18/: README.md  test_behaviors.py
tests/frozen/m19/: README.md  test_conveniences.py
tests/frozen/m21/: README.md  test_partitioned_writer.py
tests/frozen/m24/: README.md  test_interface_parity.py
tests/frozen/m28/: test_preservable_externals.py
tests/frozen/m3/: analyses.py  conftest.py  test_dispatch.py  test_eval.py  test_integration_adl.py  test_metadata_only.py  test_payloads.py  test_provenance.py  test_recording.py
tests/frozen/m5/: test_no_overtouch.py  test_projection.py  test_topologies.py
tests/frozen/m9/: test_generic_external.py
